# sms_group_project

./: .gitignore  ARCHITECTURE_AND_RUN_GUIDE.md  CMakeLists.txt  README.md  package.xml  pytest.ini  setup.py
config/: robot_config.yaml  warehouse_map.yaml
docs/: VISUALIZATION_QUICK_START.md  architecture_overview.md  member_functionality_plan.md  rosbag_recording_guide.md  sensors_used.md  testing_guide.md
launch/: demo_with_rviz.launch  demo_with_rviz_delivery.launch  gazebo_warehouse.launch  rviz_delivery_demo.launch  rviz_delivery_robot.launch  rviz_robot.launch  rviz_with_gui.launch  warehouse_demo.launch  warehouse_demo_delivery.launch
models/warehouse_robot/: model.config  model.sdf
rviz/: robot.rviz  robot_camera_follow.rviz
scripts/: battery_publisher_node.py  charging_controller_node.py  check_demo_bag.sh  diagnostic_logger_node.py  emergency_stop_node.py  obstacle_detector_node.py  package_handler_node.py  path_progress_monitor_node.py  record_demo_bag.sh  replay_demo_bag.sh  run_demo_instructions.sh  run_demo_rbag.sh  run_demo_rqt.sh  run_demo_rviz.sh  run_demo_text.sh  run_gazebo_visualization.sh  rviz_delivery_visualizer_node.py  smart_warehouse_cli.py  status_publisher_node.py  task_publisher_node.py  task_queue_manager_node.py  waypoint_goal_publisher_node.py
src/smart_warehouse_robot/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_bag_cli.py  test_battery_cli.py  test_battery_models.py  test_battery_publisher_logic.py  test_battery_service.py  test_charging_controller_logic.py  test_cli.py  test_cli_final_integration.py  test_cli_output.py  test_diagnostic_logger_logic.py  test_emergency_stop_logic.py  test_full_emergency_stop_scenario.py  test_full_happy_path_scenario.py  test_full_low_battery_scenario.py  test_full_package_delivery_scenario.py  test_full_status_diagnostics_scenario.py  test_gazebo_launch_validation.py  test_launch_file_validation.py  test_models.py  test_navigation_cli.py  test_navigation_models.py  test_navigation_service.py  test_obstacle_detector_logic.py  test_operations_cli.py  test_package_cli.py  test_package_handler_logic.py  test_package_models.py  test_package_service.py  test_path_progress_monitor_logic.py  test_project_structure_validation.py  test_ros1_compatibility.py  test_safety_cli.py  test_safety_models.py  test_safety_service.py  test_scenario_cli.py  test_status_cli.py  test_status_models.py  test_status_publisher_logic.py  (+8 more)
urdf/: warehouse_robot.urdf
worlds/: warehouse_sim.world
(+27 files in other folders)
